--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/app/favicon.ico",
               { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" },
               { "glob": "**/*", "input": "public" }
             ],
