--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "node_modules/flatpickr/dist/flatpickr.min.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": [
