--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "radioutpl"
-  }
+    "default": "medialab-1e1cf",
+    "medialab": "medialab-1e1cf"
+  },
+  "targets": {},
+  "etags": {}
 }
